# Windrose_AI_V0.1

./: .gitignore  BUILD_STATUS.md  CONVENTIONS.md  Makefile  README.md  WALKTHROUGH.md  go.work  go.work.sum
deploy/e2e/: boot_services.sh  config.env  driver.py  pyproject.toml  run.sh  seed.sh
deploy/e2e/data/: claims.csv
deploy/e2e/jwks/: jwks.json
deploy/e2e/lib/: common.py  seed.py
libs/py-common/: pyproject.toml
libs/py-common/datacern_common/: events.py  iceberg.py  logging.py  retention.py
libs/py-common/tests/: conftest.py  test_authjwt.py  test_events.py  test_iceberg.py  test_kafka.py  test_logging.py  test_objectstore.py  test_opaclient.py  test_outbox.py  test_projection.py  test_retention_live.py  test_secrets.py  test_web.py
libs/py-common/windrose_common/: __init__.py  authjwt.py  iceberg.py  kafka.py  logging.py  metricsx.py  objectstore.py  opaclient.py  otelx.py  outbox.py  projection.py  redisx.py  secrets.py  web.py
sdk/agent-python/: README.md  pyproject.toml
sdk/agent-python/datacern_agent/: __init__.py  client.py
sdk/agent-python/tests/: test_client.py
services/agent-runtime/: Dockerfile  Makefile  README.md  pyproject.toml
services/agent-runtime/api/: openapi.yaml
services/agent-runtime/app/: config.py  constants.py  container.py  main.py
services/agent-runtime/app/adapters/: authz.py  case.py  chartcatalog.py  dataset.py  eval_gate.py  evidence.py  experiment.py  fakes.py  ingestion.py  killswitch.py  llm.py  memory.py  modal_trainer.py  pipeline.py  rbac.py  realtime.py  semantic.py  sessionproj.py  slm_modal_app.py  tools.py  trainer.py  vkeys.py
services/agent-runtime/app/agents/: catalog.py
services/agent-runtime/app/api/: auth.py  errors.py  schemas.py
services/agent-runtime/app/domain/: archetypes.py  canonical.py  decisions.py  entities.py  errors.py  guardrail.py  outcomes.py  policy.py  ports.py  redact.py  sft_curation.py  sft_template.py  training.py  transcripts.py  urn.py
services/agent-runtime/app/events/: bus.py  envelope.py
services/agent-runtime/app/graphs/: __init__.py  analytics.py  base.py  dashboard_designer.py  data_pipeline_builder.py  governance.py  inference_agent.py  meta_router.py  ml_engineer.py  model_training.py  onboarding.py  persona.py  persona_copilot.py  triage.py
services/agent-runtime/app/prompts/: __init__.py  data_pipeline_builder.system.md  persona_copilot.system.md  triage.system.md
services/agent-runtime/app/proposals/: effect.py  service.py
services/agent-runtime/app/runtime/: engine.py  event_triggers.py  killrace.py  orchestrator.py  retrain_scheduler.py
services/agent-runtime/events/: agent_event_envelope.avsc  ai_agent_run.avsc  ai_proposal.avsc
services/agent-runtime/migrations/: env.py
services/agent-runtime/tests/: conftest.py
services/ai-gateway/: Dockerfile  Makefile  README.md  RUNBOOK.md  alembic.ini  pyproject.toml
services/ai-gateway/api/: openapi.yaml
services/ai-gateway/app/: config.py  container.py  main.py  registration.py  utils.py
services/ai-gateway/events/: ai_event_envelope.avsc  ai_token_usage.avsc
services/ai-gateway/migrations/: env.py
services/ai-gateway/tests/: conftest.py
services/dataset-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/dataset-service/api/: openapi.yaml
services/dataset-service/app/: config.py  container.py  main.py  registration.py  utils.py
services/dataset-service/events/: dataset_event_envelope.avsc
services/dataset-service/migrations/: env.py
services/dataset-service/tests/: conftest.py
services/eval-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/eval-service/api/: openapi.yaml
services/eval-service/app/: config.py  container.py  main.py  registration.py  utils.py
services/eval-service/events/: eval_event_envelope.avsc
services/eval-service/migrations/: env.py
services/eval-service/tests/: conftest.py
services/experiment-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/experiment-service/api/: openapi.yaml
services/experiment-service/app/: config.py  container.py  main.py  registration.py  utils.py
services/experiment-service/events/: experiment_event_envelope.avsc
services/experiment-service/migrations/: env.py
services/experiment-service/tests/: conftest.py
services/inference-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/inference-service/api/: openapi.yaml
services/inference-service/app/: config.py  container.py  main.py  registration.py  utils.py  workers.py
services/inference-service/events/: inference_event_envelope.avsc
services/inference-service/migrations/: env.py
services/inference-service/tests/: conftest.py
services/ingestion-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/ingestion-service/api/: openapi.yaml
services/ingestion-service/app/: __init__.py  config.py  container.py  ids.py  main.py  registration.py
services/ingestion-service/events/: ingestion_event_envelope.avsc
services/ingestion-service/migrations/: env.py
services/ingestion-service/scripts/: export_openapi.py
services/ingestion-service/tests/: conftest.py  util.py
services/memory-service/: Dockerfile  README.md  pyproject.toml
services/memory-service/api/: openapi.yaml
services/memory-service/app/: config.py  container.py  main.py  registration.py  utils.py
services/memory-service/events/: erasure_completed.avsc  memory_event_envelope.avsc  memory_quarantined.avsc  memory_written.avsc
services/memory-service/migrations/: env.py
services/memory-service/tests/: conftest.py
services/pipeline-orchestrator/: Dockerfile  Makefile  README.md  pyproject.toml
services/pipeline-orchestrator/api/: openapi.yaml
services/pipeline-orchestrator/app/: config.py  container.py  main.py  registration.py  utils.py
services/pipeline-orchestrator/events/: pipeline_event_envelope.avsc
services/pipeline-orchestrator/migrations/: env.py
services/pipeline-orchestrator/tests/: conftest.py
(+2851 files in other folders)
