[project]
name = "agent-runtime"
version = "0.1.0"
description = "Windrose agent-runtime + agent-registry: LangGraph-in-Temporal agent execution, the proposal/HITL framework, and the signed proposal-execution grant issuer (BRD 14)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
    "httpx>=0.27",
    "redis>=5.0",
    "aiokafka>=0.11",
    "psycopg[binary]>=3.1",
    "langgraph>=0.2,<1.1",
    "temporalio>=1.7",
    # Pure-python PDF text extraction for case-evidence grounding (agent reads
    # the actual text of attached claim documents; no native deps / OCR).
    "pypdf>=4.2",
    "windrose-common",
]

[project.optional-dependencies]
# SLM distillation on serverless GPU (AR_SLM_TRAINER_BACKEND=modal). Kept OPTIONAL
# so a CPU-only / non-Modal deploy stays lean: without it the modal backend fails
# honestly with GpuTrainerNotConfigured rather than importing a missing SDK. The
# heavy ML stack (torch/peft/trl) is NOT here — it lives in the Modal image
# (app/adapters/slm_modal_app.py) and only ever installs on the GPU worker.
slm-modal = ["modal>=0.64"]

[tool.uv.sources]
windrose-common = { path = "../../libs/py-common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.5",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires Docker/live infra (Testcontainers pgvector, Redis, Redpanda, OPA, Temporal, Ollama-via-ai-gateway, tool-plane, case-service); auto-skips when unavailable",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]
