[project]
name = "ingestion-service"
version = "0.1.0"
description = "Windrose ingestion-service: connections, ingestion jobs, resumable uploads, schedules"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "aiomysql>=0.2",
    "asyncssh>=2.14",
    # FTP / FTPS source connector (local-protocol driver, like sftp)
    "aioftp>=0.22",
    # Microsoft SQL Server + Azure Synapse (TDS wire protocol; no ODBC system dep)
    "pymssql>=2.3",
    # Oracle (python-oracledb THIN mode — no Oracle client install needed)
    "oracledb>=2.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pyjwt[crypto]>=2.8",
    "croniter>=2.0",
    "pyarrow>=16",
    "fastavro>=1.9",
    "httpx>=0.27",
    "windrose-common",
]

# Credential-gated cloud/SaaS driver SDKs. Their adapter code is real and
# unit-tested via mocked transports; live end-to-end verification needs real
# customer credentials (CONVENTIONS.md "one honest ceiling"). Kept in an
# optional group so the default unit/integration tiers stay lightweight — the
# real runtime path imports each SDK lazily and only when its connector is used.
# Install with: uv sync --group dev --extra cloud
[project.optional-dependencies]
cloud = [
    "snowflake-connector-python>=3.12",
    "google-cloud-bigquery>=3.25",
    "google-cloud-spanner>=3.47",
    "redshift-connector>=2.1",
    "databricks-sql-connector>=3.4",
    "simple-salesforce>=1.12",
    # Object-store / data-lake SOURCE connectors (credential-gated backends).
    # S3 uses boto3 (already a base dep via windrose-common), so it stays out of
    # this group and is verified live against MinIO.
    "google-cloud-storage>=2.18",
    "azure-storage-blob>=12.22",
    # SECRETS_BACKEND=azure|gcp adapters (BYO Infra Hardening Phase 2,
    # docs/design/byo-infra-hardening.md). AWS Secrets Manager needs nothing
    # extra (boto3 base dep). Mock-tested only — see the contract suite.
    "azure-keyvault-secrets>=4.8",
    "azure-identity>=1.17",
    "google-cloud-secret-manager>=2.20",
]

[tool.uv.sources]
windrose-common = { path = "../../libs/py-common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres,mysql]>=4.5",
    "ruff>=0.5",
    "pyyaml>=6.0",
    # Real in-process FTP server for the FTP driver integration test (loopback,
    # real FTP wire protocol — avoids Docker passive-port mapping flakiness).
    "pyftpdlib>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires Docker (Testcontainers Postgres); auto-skips when Docker is unavailable",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
